# FoodCollectorRL

./: .gitignore  README.md
Assets/ML-Agents/Timers/: SampleScene_timers.json  Testing_timers.json  Training_timers.json
Assets/Materials/: Food.mat  Poison.mat
Assets/Models/: FoodAgent.onnx
Assets/Prefabs/: Food.prefab  Poison.prefab  TrainingArea.prefab
Assets/Scenes/: Testing.unity  Training.unity
Assets/Scripts/: FoodAgent.cs  FoodCollectorArea.cs  FoodLogic.cs
Assets/_Recovery/: 0.unity
ProjectSettings/: ProjectSettings.asset  TagManager.asset
Training/: config.yaml  pyproject.toml
