[project]
name = "FoodAgent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.2"
dependencies = [
    "mlagents==1.1.0",
    "mlagents-envs==1.1.0",
    "torch==2.1.1",
    "numpy==1.23.5",
    "tensorboard==2.20.0",
    "protobuf==3.20.3",
    "grpcio==1.48.2",
    "h5py==3.15.1",
    "gym==0.26.2",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]
